{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 16,
  "lineage": "9dd7e762-bb1d-051f-17d9-bc19d3ca67d3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "skydeploy_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:241533150242:instance/i-068f38515698c8eb8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-068f38515698c8eb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "skydeploy-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0232ce2f7ba17d12c",
            "private_dns": "ip-10-0-1-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.47",
            "public_ip": "34.233.121.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000166178fe3d5b8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b7810928cbe1fe8e",
            "tags": {
              "Name": "skydeploy-ec2"
            },
            "tags_all": {
              "Name": "skydeploy-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0723747f695c7fc5e"
            ]
          },
          "dependencies": [
            "aws_key_pair.skydeploy_key",
            "aws_security_group.skydeploy_sg",
            "aws_subnet.skydeploy_subnet",
            "aws_vpc.skydeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "skydeploy_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533150242:internet-gateway/igw-0f7ce78f80811f713",
            "id": "igw-0f7ce78f80811f713",
            "owner_id": "241533150242",
            "tags": {
              "Name": "skydeploy-igw"
            },
            "tags_all": {
              "Name": "skydeploy-igw"
            },
            "vpc_id": "vpc-0b5b85694b12ae226"
          },
          "dependencies": [
            "aws_vpc.skydeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "skydeploy_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533150242:route-table/rtb-032a7ea36d894c104",
            "id": "rtb-032a7ea36d894c104",
            "owner_id": "241533150242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f7ce78f80811f713",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "skydeploy-route-table"
            },
            "tags_all": {
              "Name": "skydeploy-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b5b85694b12ae226"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.skydeploy_igw",
            "aws_vpc.skydeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "skydeploy_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ca9f5259b5b7dae",
            "route_table_id": "rtb-032a7ea36d894c104",
            "subnet_id": "subnet-0b7810928cbe1fe8e"
          },
          "dependencies": [
            "aws_internet_gateway.skydeploy_igw",
            "aws_route_table.skydeploy_route_table",
            "aws_subnet.skydeploy_subnet",
            "aws_vpc.skydeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "skydeploy_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533150242:security-group/sg-0723747f695c7fc5e",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0723747f695c7fc5e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "skydeploy-sg",
            "name_prefix": "",
            "owner_id": "241533150242",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b5b85694b12ae226"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.skydeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "skydeploy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533150242:subnet/subnet-0b7810928cbe1fe8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7810928cbe1fe8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "241533150242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "skydeploy-subnet"
            },
            "tags_all": {
              "Name": "skydeploy-subnet"
            },
            "vpc_id": "vpc-0b5b85694b12ae226"
          },
          "dependencies": [
            "aws_vpc.skydeploy_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "skydeploy_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:241533150242:vpc/vpc-0b5b85694b12ae226",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ae18944fcb45e03a",
            "default_route_table_id": "rtb-0b8935eba7b8cdc86",
            "default_security_group_id": "sg-0557bb37841680ef3",
            "dhcp_options_id": "dopt-0b26d1e7492aab39e",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b5b85694b12ae226",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8935eba7b8cdc86",
            "owner_id": "241533150242",
            "tags": {
              "Name": "skydeploy-vpc"
            },
            "tags_all": {
              "Name": "skydeploy-vpc"
            }
          }
        }
      ]
    }
  ]
}